Improved display of signature field preventing gaps in the touch mask.

--- a/frontend/geenpeil-ember/app/styles/components/signature-field.scss
+++ b/frontend/geenpeil-ember/app/styles/components/signature-field.scss
@@ -47,7 +47,7 @@
   }
 
   .signature-editor {
-    position:absolute;
+    position: fixed;
     overflow: hidden;
     top:0;
     left:0;
